# computer_vision_template

./: .gitignore  README.md  computer_vision_1.ipynb  dockerfile  pyproject.toml  requirements.txt
.ipynb_checkpoints/: computer_vision_1-checkpoint.ipynb  docker-compose-checkpoint.yml
